crates/rustowl/tests/snapshots/algorithm__f3_v1.snap
---
source: tests/algorithm.rs
expression: output
---

[96m=== Variable 'v1' (1/1) in function 'vec::f3' ===[0m

[2m  16 |[0m 
[2m  17 |[0m [95mfn[0m f3[2m([0m[2m)[0m [2m{[0m
[2m  18 |[0m     [95mlet[0m v1[2m:[0m [93mVec[0m[2m<[0m[93m_[0m[2m>[0m = [2m([0m[96m0[0m..[96m100[0m[2m)[0m[2m.[0m[96mcollect[0m[2m([0m[2m)[0m[2m;[0m
[2m     |[0m         [92m--[0m  [92m------[0m   [92m--------[0m [93m---------[0m
[2m  19 |[0m     [95mlet[0m [95mmut[0m r = [95m&[0mv1[2m;[0m
[2m     |[0m         [92m-----[0m   [96m---[0m
[2m  20 |[0m     [95mif[0m [96m0[0m < v1[2m.[0m[96mlen[0m[2m([0m[2m)[0m [2m{[0m
[2m     |[0m        [92m---[0m [96m--[0m [92m-----[0m
[2m  21 |[0m         [95mlet[0m v2[2m:[0m [93mVec[0m[2m<[0m[93m_[0m[2m>[0m = [2m([0m[96m0[0m..[96m100[0m[2m)[0m[2m.[0m[96mcollect[0m[2m([0m[2m)[0m[2m;[0m
[2m     |[0m             [92m--[0m  [92m------[0m   [92m------------------[0m
[2m  22 |[0m         r = [95m&[0mv2[2m;[0m
[2m     |[0m         [92m--------[0m
[2m  23 |[0m     [2m}[0m
[2m     |[0m     [92m-[0m
[2m  24 |[0m     [96mprintln[0m[96m![0m[2m([0m[92m"{r:?}"[0m[2m)[0m[2m;[0m
[2m     |[0m     [92m-----------------[0m
[2m  25 |[0m [2m}[0m
[2m     |[0m [92m-[0m
[2m  26 |[0m 
[2m  27 |[0m [95mfn[0m f4[2m([0m[2m)[0m [2m{[0m

[96mLegend:[0m
  [92m---[0m definitely live (lifetime)
  [92m~~~[0m maybe live
  [96m---[0m immutable borrow
  [38;5;177m---[0m mutable borrow
  [93m---[0m move / call
  [91m~~~[0m outlive / shared mutable
