crates/rustowl/tests/snapshots/algorithm__f5_r.snap
---
source: tests/algorithm.rs
expression: output
---

[96m=== Variable 'r' (1/1) in function 'vec::f5' ===[0m

[2m  42 |[0m [95mfn[0m f5[2m([0m[2m)[0m [2m{[0m
[2m  43 |[0m     [95mlet[0m [95mmut[0m v1[2m:[0m [93mVec[0m[2m<[0m[93m_[0m[2m>[0m = [2m([0m[96m0[0m..[96m100[0m[2m)[0m[2m.[0m[96mcollect[0m[2m([0m[2m)[0m[2m;[0m
[2m  44 |[0m     [95mlet[0m r = [95m&[0mv1[2m[[0m[96m0[0m[2m][0m[2m;[0m
[2m     |[0m         [92m-[0m
[2m  45 |[0m     [96mprintln[0m[96m![0m[2m([0m[92m"{v1:?}"[0m[2m)[0m[2m;[0m
[2m     |[0m     [92m------------------[0m
[2m  46 |[0m     [96mprintln[0m[96m![0m[2m([0m[92m"{r}"[0m[2m)[0m[2m;[0m
[2m     |[0m     [96m---------------[0m
[2m  47 |[0m     [2m// here, lifetime of r is already dead in NLL[0m
[2m  48 |[0m     v1[2m.[0m[96mpush[0m[2m([0m[96m100[0m[2m)[0m[2m;[0m

[96mLegend:[0m
  [92m---[0m definitely live (lifetime)
  [92m~~~[0m maybe live
  [96m---[0m immutable borrow
  [38;5;177m---[0m mutable borrow
  [93m---[0m move / call
  [91m~~~[0m outlive / shared mutable
