crates/rustowl/tests/snapshots/algorithm__fixpoint_many_arms_s11.snap
---
source: crates/rustowl/tests/algorithm.rs
expression: output
---

[96m=== Variable 's11' (1/1) in function 'fixpoint::many_arms' ===[0m

[2m  14 |[0m     [95mlet[0m s9 = [93mString[0m[2m::[0m[96mnew[0m[2m([0m[2m)[0m[2m;[0m
[2m  15 |[0m     [95mlet[0m s10 = [93mString[0m[2m::[0m[96mnew[0m[2m([0m[2m)[0m[2m;[0m
[2m  16 |[0m     [95mlet[0m s11 = [93mString[0m[2m::[0m[96mnew[0m[2m([0m[2m)[0m[2m;[0m
[2m     |[0m         [92m---[0m   [93m-------------[0m
[2m  17 |[0m     [95mmatch[0m x [2m{[0m
[2m     |[0m     [92m-------[0m
[2m  18 |[0m         [96m0[0m => [96mdrop[0m[2m([0ms0[2m)[0m[2m,[0m
[2m     |[0m         [92m-[0m    [92m--------[0m
[2m  19 |[0m         [96m1[0m => [96mdrop[0m[2m([0ms1[2m)[0m[2m,[0m
[2m     |[0m         [92m-[0m    [92m--------[0m
[2m  20 |[0m         [96m2[0m => [96mdrop[0m[2m([0ms2[2m)[0m[2m,[0m
[2m     |[0m         [92m-[0m    [92m--------[0m
[2m  21 |[0m         [96m3[0m => [96mdrop[0m[2m([0ms3[2m)[0m[2m,[0m
[2m     |[0m         [92m-[0m    [92m--------[0m
[2m  22 |[0m         [96m4[0m => [96mdrop[0m[2m([0ms4[2m)[0m[2m,[0m
[2m     |[0m         [92m-[0m    [92m--------[0m
[2m  23 |[0m         [96m5[0m => [96mdrop[0m[2m([0ms5[2m)[0m[2m,[0m
[2m     |[0m         [92m-[0m    [92m--------[0m
[2m  24 |[0m         [96m6[0m => [96mdrop[0m[2m([0ms6[2m)[0m[2m,[0m
[2m     |[0m         [92m-[0m    [92m--------[0m
[2m  25 |[0m         [96m7[0m => [96mdrop[0m[2m([0ms7[2m)[0m[2m,[0m
[2m     |[0m         [92m-[0m    [92m--------[0m
[2m  26 |[0m         [96m8[0m => [96mdrop[0m[2m([0ms8[2m)[0m[2m,[0m
[2m     |[0m         [92m-[0m    [92m--------[0m
[2m  27 |[0m         [96m9[0m => [96mdrop[0m[2m([0ms9[2m)[0m[2m,[0m
[2m     |[0m         [92m-[0m    [92m--------[0m
[2m  28 |[0m         [96m10[0m => [96mdrop[0m[2m([0ms10[2m)[0m[2m,[0m
[2m     |[0m         [92m--[0m    [92m---------[0m
[2m  29 |[0m         [96m11[0m => [96mdrop[0m[2m([0ms11[2m)[0m[2m,[0m
[2m     |[0m         [92m--[0m         [93m---[0m
[2m  30 |[0m         _ => [2m{[0m[2m}[0m
[2m     |[0m              [92m--[0m
[2m  31 |[0m     [2m}[0m
[2m     |[0m     [92m~[0m
[2m  32 |[0m     [96mprintln[0m[96m![0m[2m([0m[92m"after"[0m[2m)[0m[2m;[0m
[2m     |[0m     [92m~~~~~~~~~~~~~~~~~[0m
[2m  33 |[0m [2m}[0m

[96mLegend:[0m
  [92m---[0m definitely live (lifetime)
  [92m~~~[0m maybe live
  [96m---[0m immutable borrow
  [38;5;177m---[0m mutable borrow
  [93m---[0m move / call
  [91m~~~[0m outlive / shared mutable
