crates/rustowl/tests/snapshots/algorithm__must_live_cond_move_a.snap
---
source: crates/rustowl/tests/algorithm.rs
expression: output
---

[96m=== Variable 'a' (1/1) in function 'must_live::cond_move' ===[0m

[2m 165 |[0m [2m// `a` is moved on only one branch while borrowed (does not compile).[0m
[2m 166 |[0m [95mfn[0m cond_move[2m([0m[96mc[0m[2m:[0m [93mbool[0m[2m)[0m [2m{[0m
[2m 167 |[0m     [95mlet[0m a = [93mString[0m[2m::[0m[96mfrom[0m[2m([0m[92m"a"[0m[2m)[0m[2m;[0m
[2m     |[0m         [92m-[0m   [93m-----------------[0m
[2m 168 |[0m     [95mlet[0m r = [95m&[0ma[2m;[0m
[2m     |[0m         [92m-[0m   [96m--[0m
[2m 169 |[0m     [95mif[0m c [2m{[0m
[2m     |[0m        [92m-[0m
[2m 170 |[0m         [96mdrop[0m[2m([0ma[2m)[0m[2m;[0m
[2m     |[0m         [92m----[0m [93m-[0m
[2m 171 |[0m     [2m}[0m
[2m     |[0m     [92m~[0m
[2m 172 |[0m     [96mprintln[0m[96m![0m[2m([0m[92m"{r}"[0m[2m)[0m[2m;[0m
[2m     |[0m     [91m~~~~~~~~~~~~~~~[0m
[2m 173 |[0m [2m}[0m
[2m     |[0m [92m~[0m
[2m 174 |[0m 
[2m 175 |[0m [2m// `a` is moved while borrowed and then reassigned (does not compile).[0m

[96mLegend:[0m
  [92m---[0m definitely live (lifetime)
  [92m~~~[0m maybe live
  [96m---[0m immutable borrow
  [38;5;177m---[0m mutable borrow
  [93m---[0m move / call
  [91m~~~[0m outlive / shared mutable
